<resources>
    <string name="app_name">ShanghaiTechWifiHelper</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_connect">Connect</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_remember">Remember Password</string>
    <string name="prompt_auto_connect">Auto Connect</string>
    <string name="prompt_turn_on_wifi">Turn on WIFI</string>
    <string name="prompt_info">Info</string>
    <string name="prompt_cancel">Cancel</string>
    <string name="prompt_ok">OK</string>
    <string name="message_wifi_disabled">WIFI is disabled.</string>
    <string name="message_wifi_wrong_ssid">Please connect to ShanghaiTech and try again!</string>
    <string name="appwidget_text">One Key Auth</string>
    <string name="add_widget">Add widget</string>
    <string name="message_widget_need_auto_connect">OneKeyAuth Widget needs Auto Connect</string>
    <string name="message_post_again">Exchanging data with auth server</string>
    <string name="message_httpcode_not_200">Fail to connect auth server!</string>
    <string name="message_new_version">New version released!</string>
    <string name="prompt_update">Download</string>
    <string name="menu_update">Update</string>
    <string name="menu_about">About</string>
    <string name="menu_bugreport">Bug Report</string>
    <string name="message_already_latest">It is the latest version!</string>
    <string name="message_update_failure">Fail to connect update server</string>
    <string name="prompt_ignore">Ignore</string>
    <string name="message_checking_update">Checking latest version...</string>
    <string name="app_author">Zean Zhou</string>
    <string name="message_feedback_failure">Cannot connect to app server, Please retry later!</string>
    <string name="message_feedback_success">Your feedback has been submitted!</string>
    <string name="prompt_feedback_name">Name</string>
    <string name="prompt_feedback_contact">Contact (QQ/Email/Phone)</string>
    <string name="prompt_feedback_feedback">Feedback</string>
    <string name="message_feedback_sending_now">Sending...</string>
</resources>
